<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".lesson2.task22.CodingChallenge222">

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/milk" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/eggs" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/tomato" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/sour_cream" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/cake" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/bread" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/meat" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/salad" />

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/vodka" />

    <Button
        android:id="@+id/button10"
        android:layout_width="@dimen/coding_challenge_2_2_button_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/carrot" />

</LinearLayout>
