<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/codding_challenge_2_2_padding_hor"
    tools:context=".lesson2.task22.CodingChallenge221">

    <Button
        android:id="@+id/add_purchases_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_purchases" />

    <TextView
        android:id="@+id/purchase1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_horizontal_codding_challenge_22"
        android:gravity="center"
        android:textSize="@dimen/purchases_size_coding_challenge_22"
        android:textStyle="bold"
        tools:text="Purchase" />

    <!--    Codding challenge 2.3-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/enter_shop_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/enter_the_name_of_the_shop"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/find" />

    </LinearLayout>

    <!--    Codding challenge 2.3-->

</LinearLayout>
