<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson2.Task21.Task21FirstScreen">

    <Button
        android:id="@+id/button_hello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/task_2_1_first_screen_default_margin"
        android:layout_marginTop="@dimen/task_2_1_first_screen_default_margin"
        android:layout_marginEnd="@dimen/task_2_1_first_screen_default_margin"
        android:background="@color/teal_200"
        android:text="@string/say_hello"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/task_2_1_first_screen_default_margin"
        android:layout_marginEnd="@dimen/task_2_1_first_screen_default_margin"
        android:layout_marginBottom="@dimen/task_2_1_first_screen_default_margin"
        android:background="@color/teal_200"
        android:text="@string/count"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/task_2_1_first_screen_default_margin"
        android:layout_marginTop="@dimen/task_2_1_first_screen_default_margin"
        android:layout_marginEnd="@dimen/task_2_1_first_screen_default_margin"
        android:layout_marginBottom="@dimen/task_2_1_first_screen_default_margin"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/task_2_1_first_screen_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hello" />

</androidx.constraintlayout.widget.ConstraintLayout>